# hotel-room-serivce-redis.rs

./: .gitpod.yml  Cargo.toml  README.md  package.json
pkgs/logger/: Cargo.toml
pkgs/logger/src/: lib.rs
pkgs/proto/: Cargo.toml
pkgs/proto/src/: lib.rs
pkgs/proto/src/job/: data.rs  event.rs  mod.rs  status.rs
pkgs/proto/src/reactor/: claim_mode.rs  context.rs  error.rs  mod.rs  processor.rs  stream_consumer.rs  stream_entry.rs  tests.rs
scripts/: args  cargo  compose  staff
services/reception/: Cargo.toml  package.json
services/reception/src/: consumer.rs  gen.rs  main.rs  producer.rs
services/staff/: Cargo.toml  package.json
services/staff/src/: main.rs
