[workspace]
members = [ "services/*", "pkgs/*" ]

[workspace.dependencies]
anyhow             = { version = "1.0.68" }
argh               = { version = "0.1.10" }
async-trait        = { version = "0.1.64" }
chrono             = { version = "0.4.22", features = ["serde"] }
fern               = { version = "0.6.1", features = ["colored"] }
log                = { version = "0.4.14" }
logger             = { path = "pkgs/logger/" }
proto              = { path = "pkgs/proto" }
rand               = { version = "0.8.5" }
redis              = { version = "0.22.1", features = ["tokio-comp", "aio"] }
redis-graph        = { version = "0.4.3" }
redis-swapplex     = { version = "0.4.0" }
serde              = { version = "1.0.152", features = ["derive"] }
serde-aux          = { version = "4.1.2" }
serde_json         = { version = "1.0.91" }
tap                = { version = "1.0.1" }
thiserror          = { version = "1.0.38" }
tokio              = { version = "1.25", features = ["full"] }

