[package]
name = "staff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow             = { workspace = true }
argh               = { workspace = true }
async-trait        = { workspace = true }
log                = { workspace = true }
logger             = { workspace = true }
proto              = { workspace = true }
rand               = { workspace = true }
redis              = { workspace = true }
redis-graph        = { workspace = true }
redis-swapplex     = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
